--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">NZPost - Track and Trace</string>
-    <string name="label">NZPost - Track and Trace</string>
+    <string name="app_name">Track and Trace</string>
+    <string name="label">Track and Trace</string>
 
     <string name="searchresults">Search Results</string>
     <string name="itemdetails">Details</string>
@@ -19,13 +19,12 @@
 
     <string name="pref_base_url_key">base.url</string>
     <string name="pref_base_url_title">Base URL</string>
-    <string name="pref_base_url_summary">Enter the base Track and Trace Search URL.</string>
+    <string name="pref_base_url_summary">Enter the base Track and Trace Search URL. </string>
     <string name="base_url">http://services.nzpost.co.nz/NZP/NZPostTracking.svc/TrackIDs/1_0/</string>
 
     <string name="pref_saved_key">Saved</string>
     <string name="pref_saved_title">Saved Items</string>
     <string name="pref_saved_summary">Saved Tracking Numbers (comma separated).</string>
-
 
     <string name="pref_search_boxes_key">search.boxes</string>
     <string name="pref_search_boxes_title">Search Boxes</string>
@@ -35,11 +34,10 @@
     <string name="searchform">Search</string>
     <string name="search_inprogress">Searching ...</string>
     <string name="search_form_go">Run search</string>
-   
+    
     <!--  Error strings -->
     <string name="search_bad_request">Sorry, bad request!</string>
-    <string name="search_url_invalid">The URL you have entered is invalid.</string>
-    <string name="search_connection_failure">Sorry the search failed due to a connection problem.</string>
+    <string name="search_failure">Sorry the search failed, check connection and search URL.</string>
     <string name="search_no_results">Sorry the search returned no results.</string>
     <string name="search_no_search_terms">Sorry, no search terms entered.</string>
     <string name="scan_no_free_input_field">Sorry there are no free input fields to put the scan results.</string>
